<resources>
    <string name="app_name">ProGreen Recycling</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="dashboard">Dashboard</string>
    <string name="categories">Categories</string>
    <string name="submit">Submit</string>
    <string name="rewards">Rewards</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="current_points">Current Points</string>
    <string name="submit_recyclables">Submit Recyclables</string>
    <string name="recycle_more_earn_more">Recycle More, Earn More</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_subtitle">Log in and continue your green journey</string>
</resources>
